// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPRouterWithSwaggerUI should be bypassed with no debug env 1`] = `
{
  "autoloaderCalls": [
    [
      "MAX_HEADERS_COUNT",
    ],
    [
      "KEEP_ALIVE_TIMEOUT",
    ],
    [
      "SOCKET_TIMEOUT",
    ],
    [
      "MAX_CONNECTIONS",
    ],
    [
      "PROCESS_NAME",
    ],
    [
      "SIGNALS",
    ],
    [
      "BUFFER_LIMIT",
    ],
    [
      "PARSERS",
    ],
    [
      "STRINGIFYERS",
    ],
    [
      "DECODERS",
    ],
    [
      "ENCODERS",
    ],
    [
      "QUERY_PARSER",
    ],
    [
      "TIMEOUT",
    ],
    [
      "TRANSACTIONS",
    ],
    [
      "uniqueId",
    ],
    [
      "ERRORS_DESCRIPTORS",
    ],
    [
      "DEFAULT_ERROR_CODE",
    ],
    [
      "SHIELD_CHAR",
    ],
    [
      "MAX_CLEAR_CHARS",
    ],
    [
      "MAX_CLEAR_RATIO",
    ],
    [
      "SENSIBLE_PROPS",
    ],
    [
      "SENSIBLE_HEADERS",
    ],
  ],
  "debugCalls": [
    [
      "⌛ - Delay service initialized.",
    ],
    [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    [
      "✅ - Closing HTTP server.",
    ],
    [
      "✔️ - HTTP server closed!",
    ],
    [
      "❤️ - Initializing the APM service.",
    ],
    [
      "👣 - Logging service initialized.",
    ],
    [
      "💱 - HTTP Transaction initialized.",
    ],
    [
      "📇 - Process service initialized.",
    ],
    [
      "🕶️ - Initializing the obfuscator service.",
    ],
    [
      "🚦 - HTTP Router initialized.",
    ],
    [
      "🛂 - Initializing the importer!",
    ],
  ],
  "logErrorCalls": [
    [
      "🔂 - Running in "test" environment.",
    ],
    [
      "🎙️ - HTTP Server listening at "http://localhost:22223".",
    ],
    [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": [],
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should serve Swagger HTML 1`] = `
{
  "autoloaderCalls": [
    [
      "MAX_HEADERS_COUNT",
    ],
    [
      "KEEP_ALIVE_TIMEOUT",
    ],
    [
      "SOCKET_TIMEOUT",
    ],
    [
      "MAX_CONNECTIONS",
    ],
    [
      "PROCESS_NAME",
    ],
    [
      "SIGNALS",
    ],
    [
      "BUFFER_LIMIT",
    ],
    [
      "PARSERS",
    ],
    [
      "STRINGIFYERS",
    ],
    [
      "DECODERS",
    ],
    [
      "ENCODERS",
    ],
    [
      "QUERY_PARSER",
    ],
    [
      "TIMEOUT",
    ],
    [
      "TRANSACTIONS",
    ],
    [
      "uniqueId",
    ],
    [
      "ERRORS_DESCRIPTORS",
    ],
    [
      "DEFAULT_ERROR_CODE",
    ],
    [
      "SHIELD_CHAR",
    ],
    [
      "MAX_CLEAR_CHARS",
    ],
    [
      "MAX_CLEAR_RATIO",
    ],
    [
      "SENSIBLE_PROPS",
    ],
    [
      "SENSIBLE_HEADERS",
    ],
  ],
  "data": "<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8">
    <title>Swagger UI</title>
    <link rel="stylesheet" type="text/css" href="./swagger-ui.css" />
    <link rel="stylesheet" type="text/css" href="index.css" />
    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
  </head>

  <body>
    <div id="swagger-ui"></div>
    <script src="./swagger-ui-bundle.js" charset="UTF-8"> </script>
    <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
    <script src="./swagger-initializer.js" charset="UTF-8"> </script>
  </body>
</html>
",
  "debugCalls": [
    [
      "⌛ - Delay service initialized.",
    ],
    [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    [
      "✅ - Closing HTTP server.",
    ],
    [
      "✔️ - HTTP server closed!",
    ],
    [
      "❤️ - Initializing the APM service.",
    ],
    [
      "👣 - Logging service initialized.",
    ],
    [
      "💱 - HTTP Transaction initialized.",
    ],
    [
      "📇 - Process service initialized.",
    ],
    [
      "🕶️ - Initializing the obfuscator service.",
    ],
    [
      "🚦 - HTTP Router initialized.",
    ],
    [
      "🛂 - Dynamic import of "ecstatic".",
    ],
    [
      "🛂 - Dynamic import of "swagger-ui-dist".",
    ],
    [
      "🛂 - Initializing the importer!",
    ],
  ],
  "headers": {
    "cache-control": "max-age=3600",
    "connection": "close",
    "content-length": "734",
    "content-type": "text/html",
    "date": undefined,
    "etag": undefined,
    "last-modified": undefined,
    "server": undefined,
    Symbol(defaults): null,
  },
  "logErrorCalls": [
    [
      "🔂 - Running in "test" environment.",
    ],
    [
      "💁 - Serving the API docs: http://localhost:22224/docs",
    ],
    [
      "🎙️ - HTTP Server listening at "http://localhost:22224".",
    ],
    [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": [],
  "status": 200,
}
`;

exports[`wrapHTTPRouterWithSwaggerUI should work 1`] = `
{
  "autoloaderCalls": [
    [
      "MAX_HEADERS_COUNT",
    ],
    [
      "KEEP_ALIVE_TIMEOUT",
    ],
    [
      "SOCKET_TIMEOUT",
    ],
    [
      "MAX_CONNECTIONS",
    ],
    [
      "PROCESS_NAME",
    ],
    [
      "SIGNALS",
    ],
    [
      "BUFFER_LIMIT",
    ],
    [
      "PARSERS",
    ],
    [
      "STRINGIFYERS",
    ],
    [
      "DECODERS",
    ],
    [
      "ENCODERS",
    ],
    [
      "QUERY_PARSER",
    ],
    [
      "TIMEOUT",
    ],
    [
      "TRANSACTIONS",
    ],
    [
      "uniqueId",
    ],
    [
      "ERRORS_DESCRIPTORS",
    ],
    [
      "DEFAULT_ERROR_CODE",
    ],
    [
      "SHIELD_CHAR",
    ],
    [
      "MAX_CLEAR_CHARS",
    ],
    [
      "MAX_CLEAR_RATIO",
    ],
    [
      "SENSIBLE_PROPS",
    ],
    [
      "SENSIBLE_HEADERS",
    ],
  ],
  "data": {
    "ping": "pong",
  },
  "debugCalls": [
    [
      "⌛ - Delay service initialized.",
    ],
    [
      "⏳ - Cancelling pending timeouts:",
      0,
    ],
    [
      "⏳ - Cleared a delay",
    ],
    [
      "⏳ - Created a delay:",
      30000,
    ],
    [
      "✅ - Closing HTTP server.",
    ],
    [
      "✔️ - HTTP server closed!",
    ],
    [
      "❤️ - Initializing the APM service.",
    ],
    [
      "👣 - Logging service initialized.",
    ],
    [
      "💱 - HTTP Transaction initialized.",
    ],
    [
      "📇 - Process service initialized.",
    ],
    [
      "🕶️ - Initializing the obfuscator service.",
    ],
    [
      "🚦 - HTTP Router initialized.",
    ],
    [
      "🛂 - Dynamic import of "ecstatic".",
    ],
    [
      "🛂 - Dynamic import of "swagger-ui-dist".",
    ],
    [
      "🛂 - Initializing the importer!",
    ],
  ],
  "headers": {
    "connection": "close",
    "content-type": "application/json",
    "date": undefined,
    "etag": undefined,
    "last-modified": undefined,
    "server": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
    Symbol(defaults): null,
  },
  "logErrorCalls": [
    [
      "🔂 - Running in "test" environment.",
    ],
    [
      "💁 - Serving the API docs: http://localhost:22222/docs",
    ],
    [
      "🎙️ - HTTP Server listening at "http://localhost:22222".",
    ],
    [
      "On air 🚀🌕",
    ],
  ],
  "logInfoCalls": [
    [
      "CALL {"id":"0","protocol":"http","ip":"_ip_","startInBytes":183,"startOutBytes":0,"startTime":1267833600000,"url":"/v1/ping","method":"GET","reqHeaders":{"accept":"application/json, text/plain, */*","user-agent":"__avoid_axios_version__","accept-encoding":"gzip, deflate, br","host":"localhost:22222","connection":"close"},"errored":false,"endTime":1267833600000,"endInBytes":183,"endOutBytes":179,"statusCode":200,"resHeaders":{"content-type":"application/json"},"operationId":"getPing"}",
    ],
  ],
  "status": 200,
}
`;
